--- a/index.html
+++ b/index.html
@@ -60,17 +60,22 @@
                     <article>
                         <h3>スピーカー</h3>
                         <div class="speaker">
+                            <!--TODO : プロフィール画像を受け取ったら更新する-->
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>1人目: 未定</h4>
-                                <p>1人目のプロフィール</p>
+                                <h4>はくとさん</h4>
+                                <p>東京出身のおとこ。引っ越しのことならこいつにおまかせ。</p>
+                                <p>引っ越しをすることを話すと早口で自らの引っ越し回数を教えてくる。</p>
+                                <p>親が引っ越しを主導していたため、本人には実践的なスキルはない。</p>
                             </div>
                         </div>
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>2人目: 未定</h4>
-                                <p>2人目のプロフィール</p>
+                                <h4>2人目: ゆりあさん</h4>
+                                <p>はくとさんの彼女さん。情緒不安定で高卒、チャレンジは</p>
+                                <p>嫌いで食べ残しを頻繁にする。威勢はいい。</p>
+                                <p>はくとさんに買わせた宅建の参考書はどこかへ消えた。
                             </div>
                         </div>
                     </article>
