--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
                     <article>
                         <h3>スピーカー</h3>
                         <div class="speaker">
-                            <!--TODO : プロフィール画像を受け取ったら更新する-->
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
                                 <h4>はくとさん</h4>
@@ -104,7 +103,7 @@
                                 </tr>
                                 <tr>
                                     <td>20:00〜20:45</td>
-                                    <td>ねこの寝学(ゆりあさん)</td>
+                                    <td>デカケツからの脱却(ゆりあさん)</td>
                                 </tr>
                                 <tr>
                                     <td>20:45〜21:00</td>
